Reviewed new data cleaning implementations. Small code fixes